// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Zones.vue renders snapshot when multizone 1`] = `
<div>
  <div
    class="zones"
  >
    <div
      class="component-frame"
    >
      <div
        class="data-overview"
        data-testid="data-overview"
      >
        <div
          class="data-table-controls mb-2"
        >
           
          <button
            class="k-button ml-2 refresh-button small primary"
            data-v-38fa8ecf=""
            type="button"
          >
            <div
              class="refresh-icon"
              data-v-38fa8ecf=""
            >
              <svg
                data-v-38fa8ecf=""
                viewBox="0 0 36 36"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  data-v-38fa8ecf=""
                  fill="#fff"
                  fill-rule="nonzero"
                >
                  <path
                    d="M18 5.5a12.465 12.465 0 00-8.118 2.995 1.5 1.5 0 001.847 2.363l.115-.095A9.437 9.437 0 0118 8.5l.272.004a9.487 9.487 0 019.07 7.75l.04.246H25a.5.5 0 00-.416.777l4 6a.5.5 0 00.832 0l4-6 .04-.072A.5.5 0 0033 16.5h-2.601l-.017-.15C29.567 10.2 24.294 5.5 18 5.5zM2.584 18.723l-.04.072A.5.5 0 003 19.5h2.6l.018.15C6.433 25.8 11.706 30.5 18 30.5c3.013 0 5.873-1.076 8.118-2.995a1.5 1.5 0 00-1.847-2.363l-.115.095A9.437 9.437 0 0118 27.5l-.272-.004a9.487 9.487 0 01-9.07-7.75l-.041-.246H11a.5.5 0 00.416-.777l-4-6a.5.5 0 00-.832 0l-4 6z"
                    data-v-38fa8ecf=""
                  />
                </g>
              </svg>
            </div>
             
            <span
              data-v-38fa8ecf=""
            >
              Refresh
            </span>
          </button>
        </div>
         
        <div
          class="data-overview-content"
        >
          <div
            class="data-overview-table"
          >
            <table
              class="k-table micro-table has-hover is-clickable"
              data-v-bfeabd48=""
            >
              <thead
                data-v-bfeabd48=""
              >
                <tr
                  data-v-bfeabd48=""
                >
                  <th
                    class=""
                    data-v-bfeabd48=""
                  >
                    <!---->
                  </th>
                  <th
                    class=""
                    data-v-bfeabd48=""
                  >
                     Status 
                  </th>
                  <th
                    class=""
                    data-v-bfeabd48=""
                  >
                     Name 
                  </th>
                  <th
                    class=""
                    data-v-bfeabd48=""
                  >
                     Zone CP Version 
                  </th>
                  <th
                    class=""
                    data-v-bfeabd48=""
                  >
                     Backend 
                  </th>
                  <th
                    class=""
                    data-v-bfeabd48=""
                  >
                    <!---->
                  </th>
                </tr>
              </thead>
              <tbody
                data-v-bfeabd48=""
              >
                <tr
                  data-v-bfeabd48=""
                >
                  <td
                    data-v-bfeabd48=""
                  >
                    <a
                      class="data-table-action-link is-active"
                      data-v-bfeabd48=""
                    >
                      <span
                        class="action-link__active-state"
                        data-v-bfeabd48=""
                      >
                        
              ✓
              
                        <span
                          class="sr-only"
                          data-v-bfeabd48=""
                        >
                          
                Selected
              
                        </span>
                      </span>
                    </a>
                  </td>
                  <td
                    data-v-bfeabd48=""
                  >
                    <div
                      class="entity-status"
                      data-v-bfeabd48=""
                    >
                      <span
                        class="entity-status__dot"
                        data-v-bfeabd48=""
                      />
                       
                      <span
                        class="entity-status__label"
                        data-v-bfeabd48=""
                      >
                        Online
                      </span>
                    </div>
                  </td>
                  <td
                    data-v-bfeabd48=""
                  >
                    cluster-1
                  </td>
                  <td
                    data-v-bfeabd48=""
                  >
                    1.0.0-rc2-211-g823fe8ce
                  </td>
                  <td
                    data-v-bfeabd48=""
                  >
                    memory
                  </td>
                  <td
                    data-v-bfeabd48=""
                  >
                    <svg
                      class="kong-icon mr-1 kong-icon-warning"
                      data-v-a7c9c1d2=""
                      data-v-bfeabd48=""
                      height="20"
                      role="img"
                      viewBox="0 0 48 42"
                      width="20"
                    >
                      <title
                        data-v-a7c9c1d2=""
                      >
                        warning
                      </title>
                      <g
                        data-v-a7c9c1d2=""
                      >
                        <path
                          d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                          data-v-a7c9c1d2=""
                          fill="var(--black-75)"
                          fill-rule="nonzero"
                          id="Triangle"
                          type="secondary"
                        />
                        <path
                          d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                          data-v-a7c9c1d2=""
                          fill="var(--yellow-400)"
                          fill-rule="nonzero"
                          id="Path"
                        />
                        <path
                          d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                          data-v-a7c9c1d2=""
                          fill="var(--black-75)"
                          id="!"
                          type="secondary"
                        />
                      </g>
                    </svg>
                  </td>
                </tr>
                <tr
                  data-v-bfeabd48=""
                >
                  <td
                    data-v-bfeabd48=""
                  >
                    <a
                      class="data-table-action-link"
                      data-v-bfeabd48=""
                    >
                      <span
                        class="action-link__normal-state"
                        data-v-bfeabd48=""
                      >
                        
              View
            
                      </span>
                    </a>
                  </td>
                  <td
                    data-v-bfeabd48=""
                  >
                    <div
                      class="entity-status"
                      data-v-bfeabd48=""
                    >
                      <span
                        class="entity-status__dot"
                        data-v-bfeabd48=""
                      />
                       
                      <span
                        class="entity-status__label"
                        data-v-bfeabd48=""
                      >
                        Online
                      </span>
                    </div>
                  </td>
                  <td
                    data-v-bfeabd48=""
                  >
                    zone-1
                  </td>
                  <td
                    data-v-bfeabd48=""
                  >
                    1.0.0-rc2-211-g823fe8ce
                  </td>
                  <td
                    data-v-bfeabd48=""
                  >
                    memory
                  </td>
                  <td
                    data-v-bfeabd48=""
                  >
                    <svg
                      class="kong-icon mr-1 kong-icon-warning"
                      data-v-a7c9c1d2=""
                      data-v-bfeabd48=""
                      height="20"
                      role="img"
                      viewBox="0 0 48 42"
                      width="20"
                    >
                      <title
                        data-v-a7c9c1d2=""
                      >
                        warning
                      </title>
                      <g
                        data-v-a7c9c1d2=""
                      >
                        <path
                          d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                          data-v-a7c9c1d2=""
                          fill="var(--black-75)"
                          fill-rule="nonzero"
                          id="Triangle"
                          type="secondary"
                        />
                        <path
                          d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                          data-v-a7c9c1d2=""
                          fill="var(--yellow-400)"
                          fill-rule="nonzero"
                          id="Path"
                        />
                        <path
                          d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                          data-v-a7c9c1d2=""
                          fill="var(--black-75)"
                          id="!"
                          type="secondary"
                        />
                      </g>
                    </svg>
                  </td>
                </tr>
                <tr
                  data-v-bfeabd48=""
                >
                  <td
                    data-v-bfeabd48=""
                  >
                    <a
                      class="data-table-action-link"
                      data-v-bfeabd48=""
                    >
                      <span
                        class="action-link__normal-state"
                        data-v-bfeabd48=""
                      >
                        
              View
            
                      </span>
                    </a>
                  </td>
                  <td
                    data-v-bfeabd48=""
                  >
                    <div
                      class="entity-status"
                      data-v-bfeabd48=""
                    >
                      <span
                        class="entity-status__dot"
                        data-v-bfeabd48=""
                      />
                       
                      <span
                        class="entity-status__label"
                        data-v-bfeabd48=""
                      >
                        Online
                      </span>
                    </div>
                  </td>
                  <td
                    data-v-bfeabd48=""
                  >
                    zone-2
                  </td>
                  <td
                    data-v-bfeabd48=""
                  >
                    1.0.0-rc2-211-g823fe8ce
                  </td>
                  <td
                    data-v-bfeabd48=""
                  >
                    memory
                  </td>
                  <td
                    data-v-bfeabd48=""
                  >
                    <svg
                      class="kong-icon mr-1 kong-icon-warning"
                      data-v-a7c9c1d2=""
                      data-v-bfeabd48=""
                      height="20"
                      role="img"
                      viewBox="0 0 48 42"
                      width="20"
                    >
                      <title
                        data-v-a7c9c1d2=""
                      >
                        warning
                      </title>
                      <g
                        data-v-a7c9c1d2=""
                      >
                        <path
                          d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                          data-v-a7c9c1d2=""
                          fill="var(--black-75)"
                          fill-rule="nonzero"
                          id="Triangle"
                          type="secondary"
                        />
                        <path
                          d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                          data-v-a7c9c1d2=""
                          fill="var(--yellow-400)"
                          fill-rule="nonzero"
                          id="Path"
                        />
                        <path
                          d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                          data-v-a7c9c1d2=""
                          fill="var(--black-75)"
                          id="!"
                          type="secondary"
                        />
                      </g>
                    </svg>
                  </td>
                </tr>
                <tr
                  data-v-bfeabd48=""
                >
                  <td
                    data-v-bfeabd48=""
                  >
                    <a
                      class="data-table-action-link"
                      data-v-bfeabd48=""
                    >
                      <span
                        class="action-link__normal-state"
                        data-v-bfeabd48=""
                      >
                        
              View
            
                      </span>
                    </a>
                  </td>
                  <td
                    data-v-bfeabd48=""
                  >
                    <div
                      class="entity-status"
                      data-v-bfeabd48=""
                    >
                      <span
                        class="entity-status__dot"
                        data-v-bfeabd48=""
                      />
                       
                      <span
                        class="entity-status__label"
                        data-v-bfeabd48=""
                      >
                        Online
                      </span>
                    </div>
                  </td>
                  <td
                    data-v-bfeabd48=""
                  >
                    zone-3
                  </td>
                  <td
                    data-v-bfeabd48=""
                  >
                    1.0.0-rc2-211-g823fe8ce
                  </td>
                  <td
                    data-v-bfeabd48=""
                  >
                    memory
                  </td>
                  <td
                    data-v-bfeabd48=""
                  >
                    <svg
                      class="kong-icon mr-1 kong-icon-warning"
                      data-v-a7c9c1d2=""
                      data-v-bfeabd48=""
                      height="20"
                      role="img"
                      viewBox="0 0 48 42"
                      width="20"
                    >
                      <title
                        data-v-a7c9c1d2=""
                      >
                        warning
                      </title>
                      <g
                        data-v-a7c9c1d2=""
                      >
                        <path
                          d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                          data-v-a7c9c1d2=""
                          fill="var(--black-75)"
                          fill-rule="nonzero"
                          id="Triangle"
                          type="secondary"
                        />
                        <path
                          d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                          data-v-a7c9c1d2=""
                          fill="var(--yellow-400)"
                          fill-rule="nonzero"
                          id="Path"
                        />
                        <path
                          d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                          data-v-a7c9c1d2=""
                          fill="var(--black-75)"
                          id="!"
                          type="secondary"
                        />
                      </g>
                    </svg>
                  </td>
                </tr>
              </tbody>
            </table>
             
            <div
              class="pagination"
            >
              <!---->
               
              <!---->
            </div>
          </div>
           
          <!---->
           
          <!---->
        </div>
         
        <!---->
         
        <!---->
      </div>
       
      <div
        class="tab-container"
        data-testid="tab-container"
      >
        <header
          class="tab__header"
        >
          <h3>
            
          Zone: cluster-1
        
          </h3>
        </header>
         
        <div
          class="tab__content-container"
        >
          <div
            class="k-tabs"
            data-v-a38b664a=""
          >
            <ul
              aria-label="ktabs"
              data-v-a38b664a=""
              role="tablist"
            >
              <li
                aria-controls="panel-0"
                aria-selected="true"
                class="tab-item active"
                data-v-a38b664a=""
                id="overview-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-a38b664a=""
                >
                  Overview
                </a>
              </li>
              <li
                aria-controls="panel-1"
                aria-selected="false"
                class="tab-item"
                data-v-a38b664a=""
                id="insights-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-a38b664a=""
                >
                  Zone Insights
                </a>
              </li>
              <li
                aria-controls="panel-2"
                aria-selected="false"
                class="tab-item"
                data-v-a38b664a=""
                id="config-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-a38b664a=""
                >
                  Config
                </a>
              </li>
              <li
                aria-controls="panel-3"
                aria-selected="false"
                class="tab-item"
                data-v-a38b664a=""
                id="warnings-tab"
                role="tab"
                tabindex="0"
              >
                <a
                  class="tab-link"
                  data-v-a38b664a=""
                >
                  <span
                    class="flex items-center with-warnings"
                    data-v-a38b664a=""
                  >
                    <svg
                      class="kong-icon mr-1 kong-icon-warning"
                      data-v-a38b664a=""
                      data-v-a7c9c1d2=""
                      height="16"
                      role="img"
                      viewBox="0 0 48 42"
                      width="16"
                    >
                      <title
                        data-v-a7c9c1d2=""
                      >
                        warning
                      </title>
                      <g
                        data-v-a7c9c1d2=""
                      >
                        <path
                          d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                          data-v-a7c9c1d2=""
                          fill="var(--black-75)"
                          fill-rule="nonzero"
                          id="Triangle"
                          type="secondary"
                        />
                        <path
                          d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                          data-v-a7c9c1d2=""
                          fill="var(--yellow-400)"
                          fill-rule="nonzero"
                          id="Path"
                        />
                        <path
                          d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                          data-v-a7c9c1d2=""
                          fill="var(--black-75)"
                          id="!"
                          type="secondary"
                        />
                      </g>
                    </svg>
                     
                    <span
                      data-v-a38b664a=""
                    >
                      
            Warnings
          
                    </span>
                  </span>
                </a>
              </li>
            </ul>
            <div
              aria-labelledby="overview-tab"
              class="tab-container"
              data-v-a38b664a=""
              id="panel-0"
              role="tabpanel"
              tabindex="0"
            >
              <div
                data-v-a38b664a=""
              >
                <div
                  class="label-list-content"
                >
                  <div
                    class="kong-card noBorder"
                    data-v-0029352b=""
                  >
                    <!---->
                    <!---->
                    <div
                      class="k-card-body"
                      data-v-0029352b=""
                    >
                      <div
                        class="label-list__col-wrapper multi-col"
                        data-v-0029352b=""
                      >
                        <div
                          data-v-0029352b=""
                        >
                          <ul
                            data-v-0029352b=""
                          >
                            <li
                              data-v-0029352b=""
                            >
                              <h4
                                data-v-0029352b=""
                              >
                                
                  type
                
                              </h4>
                               
                              <p
                                data-v-0029352b=""
                              >
                                
                  ZoneOverview
                
                              </p>
                            </li>
                            <li
                              data-v-0029352b=""
                            >
                              <h4
                                data-v-0029352b=""
                              >
                                
                  name
                
                              </h4>
                               
                              <p
                                data-v-0029352b=""
                              >
                                
                  cluster-1
                
                              </p>
                            </li>
                            <li
                              data-v-0029352b=""
                            >
                              <h4
                                data-v-0029352b=""
                              >
                                
                  Authentication Type
                
                              </h4>
                               
                              <p
                                data-v-0029352b=""
                              >
                                
                  dpToken
                
                              </p>
                            </li>
                          </ul>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                 
                <!---->
                 
                <!---->
                 
                <!---->
              </div>
            </div>
            <div
              aria-labelledby="insights-tab"
              class="tab-container"
              data-v-a38b664a=""
              id="panel-1"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="config-tab"
              class="tab-container"
              data-v-a38b664a=""
              id="panel-2"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="warnings-tab"
              class="tab-container"
              data-v-a38b664a=""
              id="panel-3"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
          </div>
           
          <div>
            <!---->
             
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Zones.vue renders snapshot when no multizone 1`] = `
<div>
  <div
    class="zones"
  >
    <div
      class="empty-state-wrapper"
      data-v-567e03f2=""
    >
      <div
        class="empty-state-title"
        data-v-567e03f2=""
      >
        <!---->
        <h5
          data-v-567e03f2=""
        >
          <svg
            class="kong-icon kong-icon--centered kong-icon-dangerCircle"
            data-v-567e03f2=""
            data-v-a7c9c1d2=""
            height="42"
            role="img"
            viewBox="0 0 16 16"
            width="42"
          >
            <title
              data-v-a7c9c1d2=""
            >
              dangerCircle
            </title>
            <g
              data-v-a7c9c1d2=""
            >
              <path
                d="M0,8a8,8 0 1,0 16,0a8,8 0 1,0 -16,0"
                data-v-a7c9c1d2=""
                fill="#BFBFBF"
              />
              <path
                d="M9 11v2H7v-2h2zm0-8v6.5H7V3h2z"
                data-v-a7c9c1d2=""
                fill="#FFF"
                id="preserveColor"
              />
            </g>
          </svg>
          
    Kuma is running in Standalone mode.
  
        </h5>
      </div>
      <div
        class="empty-state-content"
        data-v-567e03f2=""
      >
        <p
          data-v-567e03f2=""
        >
          <p
            data-v-567e03f2=""
          >
            
      To access this page, you must be running in 
            <strong
              data-v-567e03f2=""
            >
              Multi-Zone
            </strong>
             mode.
    
          </p>
        </p>
        <p
          data-v-567e03f2=""
        >
          <a
            class="k-button primary"
            data-v-38fa8ecf=""
            data-v-567e03f2=""
            href="https://kuma.io/docs/0.6.0/documentation/deployments/"
            target="_blank"
            type="button"
          >
            
      Learn More
    
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Zones.vue renders zone insights 1`] = `
<div
  class="tab-container"
  data-testid="tab-container"
>
  <header
    class="tab__header"
  >
    <h3>
      
          Zone: cluster-1
        
    </h3>
  </header>
   
  <div
    class="tab__content-container"
  >
    <div
      class="k-tabs"
      data-v-a38b664a=""
    >
      <ul
        aria-label="ktabs"
        data-v-a38b664a=""
        role="tablist"
      >
        <li
          aria-controls="panel-0"
          aria-selected="false"
          class="tab-item"
          data-v-a38b664a=""
          id="overview-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
            data-v-a38b664a=""
          >
            Overview
          </a>
        </li>
        <li
          aria-controls="panel-1"
          aria-selected="true"
          class="tab-item active"
          data-v-a38b664a=""
          id="insights-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
            data-v-a38b664a=""
          >
            Zone Insights
          </a>
        </li>
        <li
          aria-controls="panel-2"
          aria-selected="false"
          class="tab-item"
          data-v-a38b664a=""
          id="config-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
            data-v-a38b664a=""
          >
            Config
          </a>
        </li>
        <li
          aria-controls="panel-3"
          aria-selected="false"
          class="tab-item"
          data-v-a38b664a=""
          id="warnings-tab"
          role="tab"
          tabindex="0"
        >
          <a
            class="tab-link"
            data-v-a38b664a=""
          >
            <span
              class="flex items-center with-warnings"
              data-v-a38b664a=""
            >
              <svg
                class="kong-icon mr-1 kong-icon-warning"
                data-v-a38b664a=""
                data-v-a7c9c1d2=""
                height="16"
                role="img"
                viewBox="0 0 48 42"
                width="16"
              >
                <title
                  data-v-a7c9c1d2=""
                >
                  warning
                </title>
                <g
                  data-v-a7c9c1d2=""
                >
                  <path
                    d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                    data-v-a7c9c1d2=""
                    fill="var(--black-75)"
                    fill-rule="nonzero"
                    id="Triangle"
                    type="secondary"
                  />
                  <path
                    d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                    data-v-a7c9c1d2=""
                    fill="var(--yellow-400)"
                    fill-rule="nonzero"
                    id="Path"
                  />
                  <path
                    d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                    data-v-a7c9c1d2=""
                    fill="var(--black-75)"
                    id="!"
                    type="secondary"
                  />
                </g>
              </svg>
               
              <span
                data-v-a38b664a=""
              >
                
            Warnings
          
              </span>
            </span>
          </a>
        </li>
      </ul>
      <div
        aria-labelledby="overview-tab"
        class="tab-container"
        data-v-a38b664a=""
        id="panel-0"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      <div
        aria-labelledby="insights-tab"
        class="tab-container"
        data-v-a38b664a=""
        id="panel-1"
        role="tabpanel"
        tabindex="0"
      >
        <div
          class="kong-card noBorder"
          data-v-0029352b=""
          data-v-a38b664a=""
        >
          <!---->
          <!---->
          <div
            class="k-card-body"
            data-v-0029352b=""
          >
            <ul
              class="accordion"
              data-v-0029352b=""
            >
              <li
                class="relative cursor-pointer border-b py-2 px-4"
              >
                <div
                  class="flex py-2"
                >
                  <h4
                    class="text-lg font-medium"
                  >
                    <span
                      class="color-green-400"
                    >
                      

    Connect time: 2021-02-19T07:11:15.535286Z
  
                    </span>
                     
                    <!---->
                  </h4>
                </div>
                 
                <transition-stub
                  name="accordion"
                >
                  <div>
                    <ul>
                      <div>
                        <div>
                          <h5
                            class="overview-tertiary-title"
                          >
                            
      General Information:
    
                          </h5>
                           
                          <ul>
                            <li>
                              <strong>
                                Global Instance ID:
                              </strong>
                               
        
                              <span
                                class="mono"
                              >
                                MacBook-Pro-Bartlomiej.local-9e52
                              </span>
                            </li>
                             
                            <li>
                              <strong>
                                Last Connected:
                              </strong>
                               
        on 2/19/2021
      
                            </li>
                             
                            <!---->
                          </ul>
                        </div>
                         
                        <div>
                          <ul
                            class="overview-stat-grid"
                          >
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Circuit Breaker:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Config:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Dataplane:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          External Service:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Fault Injection:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Health Check:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Mesh:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Proxy Template:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Retry:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Secret:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Traffic Log:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Traffic Permission:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Traffic Route:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Traffic Trace:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                          </ul>
                        </div>
                      </div>
                    </ul>
                  </div>
                </transition-stub>
              </li>
              <li
                class="relative cursor-pointer border-b py-2 px-4"
              >
                <div
                  class="flex py-2"
                >
                  <h4
                    class="text-lg font-medium"
                  >
                    <span
                      class="color-green-400"
                    >
                      

    Connect time: 2020-07-28T16:18:09.743141Z
  
                    </span>
                     
                    <span
                      class="ml-4 color-red-400"
                    >
                      
    Disconnect time: 2020-07-28T16:18:09.743194Z
  
                    </span>
                  </h4>
                </div>
                 
                <transition-stub
                  name="accordion"
                >
                  <div
                    style="display: none;"
                  >
                    <ul>
                      <div>
                        <div>
                          <h5
                            class="overview-tertiary-title"
                          >
                            
      General Information:
    
                          </h5>
                           
                          <ul>
                            <li>
                              <strong>
                                Global Instance ID:
                              </strong>
                               
        
                              <span
                                class="mono"
                              >
                                foobar
                              </span>
                            </li>
                             
                            <li>
                              <strong>
                                Last Connected:
                              </strong>
                               
        on 7/28/2020
      
                            </li>
                             
                            <li>
                              <strong>
                                Last Disconnected:
                              </strong>
                               
        on 7/28/2020
      
                            </li>
                          </ul>
                        </div>
                         
                        <div>
                          <ul
                            class="overview-stat-grid"
                          >
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Circuit Breaker:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Config:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Dataplane:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          External Service:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Fault Injection:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Health Check:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Mesh:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Proxy Template:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Retry:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Secret:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Traffic Log:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Traffic Permission:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Traffic Route:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                            <li>
                              <h6
                                class="overview-tertiary-title"
                              >
                                
          Traffic Trace:
        
                              </h6>
                               
                              <ul>
                                <li>
                                  <strong>
                                    Responses Sent:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                                <li>
                                  <strong>
                                    Responses Acknowledged:
                                  </strong>
                                   
            
                                  <span
                                    class="mono"
                                  >
                                    1
                                  </span>
                                </li>
                              </ul>
                            </li>
                          </ul>
                        </div>
                      </div>
                    </ul>
                  </div>
                </transition-stub>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        aria-labelledby="config-tab"
        class="tab-container"
        data-v-a38b664a=""
        id="panel-2"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      <div
        aria-labelledby="warnings-tab"
        class="tab-container"
        data-v-a38b664a=""
        id="panel-3"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
    </div>
     
    <div>
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;
